--- a/nginx_generator/templates/simple_server_ssl/default.conf
+++ b/nginx_generator/templates/simple_server_ssl/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
-    server_name node1;
+    server_name {server};
     return 301 https://$server_name$request_uri;
 }
 
@@ -11,6 +11,6 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    ssl_certificate /app/cert.crt;
-    ssl_certificate_key /app/cert.key;
+    ssl_certificate {sslcert_path};
+    ssl_certificate_key {sslkey_path};
 }
