Made the first execute methods.

--- a/nginx_generator/templates/simple_server_nonssl/default.conf
+++ b/nginx_generator/templates/simple_server_nonssl/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
-    server_name {server};
+    server_name "server";
 
-    root {root_web_path};
+    root "root";
     index index.html index.htm;
 }
