Added SSL server config generator.

--- a/nginx_generator/templates/simple_server_ssl/default.conf
+++ b/nginx_generator/templates/simple_server_ssl/default.conf
@@ -1,8 +1,23 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
-    server_name {server};
+    server_name "server";
+    return 301 https://$server_name$request_uri;
+}
 
-    root {root_web_path};
-    index index.html index.htm;
+server {
+    listen 443 ssl;
+    server_name "server";
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    root "root";
+
+    ssl_certificate "sslcert";
+    ssl_certificate_key "sslkey";
+    ssl_session_cache shared: le_nginx_SSL:1m;
+    ssl_session_timeout 1440m;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
 }
