Starting LB option

--- a/nginx_generator/templates/load_balancer_https/default.conf
+++ b/nginx_generator/templates/load_balancer_https/default.conf
@@ -1,18 +1,19 @@
-upstream nodes  {
+upstream nodes {
     ip_hash;
-    {servers}
+    "nodes";
     keepalive 64;
 }
 
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
+    server_name "server";
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name {server_name};
+    server_name "server";
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
 
@@ -29,6 +30,6 @@ server {
         proxy_pass https://nodes;
     }
 
-    ssl_certificate {ssl_cert};
-    ssl_certificate_key {ssl_key};
+    ssl_certificate "sslcert";
+    ssl_certificate_key "sslkey";
 }
